# Astra

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  README_en.md  README_zh.md  astra.service.template  cache_dump.rdb  format.py  format.sh  generate_third_pch.bash  gitcollector.py  install.sh  run_clang_tidy.py  test_cluster.sh
.github/workflows/: cmake-multi-platform.yml
Astra-CacheServer/: CMakeLists.txt  server.cpp  server_init.h  sever.cpp
Astra-CacheServer/caching/: AstraCacheStrategy.hpp
Astra-CacheServer/cluster/: CMakeLists.txt  ClusterBus.hpp  ClusterCommunicator.cpp  ClusterCommunicator.hpp  ClusterManager.cpp  ClusterManager.hpp  ClusterSession.cpp  ClusterSession.hpp
Astra-CacheServer/config/: CommandLineConfig.h  ConfigManager.h  IConfigSource.h
Astra-CacheServer/data/: redis_types.hpp
Astra-CacheServer/examples/: CMakeLists.txt  TrayPluginMain.cpp  example_client.cpp  example_client_perf.cpp  hiredis_client.cpp  labview_client_test.c  labview_flat_test.c  simple_example.c
Astra-CacheServer/network/: Singleton.h  io_context_pool.hpp
Astra-CacheServer/persistence/: leveldb_persistence.hpp  persistence.hpp  process.cpp  process.hpp  util_path.cpp  util_path.hpp
Astra-CacheServer/platform/windows/: ClientWindow.cpp  ClientWindow.h  WindowsPlugin.cpp  WindowsPlugin.h  WindowsServicePlugin.cpp  WindowsServicePlugin.h  WindowsTrayPlugin.cpp  WindowsTrayPlugin.h
Astra-CacheServer/proto/: CommandImpl.hpp  CommandResponseBuilder  CommandResponseBuilder.hpp  ICommand.hpp  LuaCommands.h  LuaExecutor.h  ProtocolParser.cpp  ProtocolParser.hpp  RedisDataCommands.hpp  command_info.hpp  command_parser.hpp  generate_command_index.py  redis_command_handler.hpp  resp_builder.hpp
Astra-CacheServer/sdk/: astra_client.cpp  astra_client.hpp  astra_client_c.cpp  astra_client_c.h  astra_client_labview.cpp  astra_client_labview.h  astra_resp.h  commands.hpp
Astra-CacheServer/server/: ChannelManager.cpp  ChannelManager.hpp  server.hpp  server_init.h  server_status.h  session.cpp  session.hpp  stats_event.h  status_collector.cpp  status_collector.h
Astra-CacheServer/tests/: test_redis_protocol.cpp  test_tcp_server.cpp
benchmark/: CMakeLists.txt  bench_astra.cpp  bench_logger.cpp
cmake/: AddLua.cmake  BuildInfo.cmake  FindVcpkg.cmake  SetupInterface.cmake  SetupTarget.cmake
code_stats_reports/: report.html
concurrent/: CMakeLists.txt  task_flow.hpp  task_queue.hpp  thread_pool.hpp
core/: CMakeLists.txt  astra.hpp  macros.hpp  noncopyable.hpp  third-party.h  types.hpp  version_info.h.in
datastructures/: CMakeLists.txt  double_buffer_ring.hpp  lfu_cache.hpp  lock_free_buffer_base.hpp  lockfree_queue.hpp  lru_cache.hpp  object_pool.hpp  ring_buffer.hpp  thread_safe_lru_cache.hpp
debian/: control  postinst  rules
patches/: fix-mimalloc-alpine.patch
scripts/: astra_service.sh  format.sh  generate_third_pch.bash  pch-check.sh
tests/: CMakeLists.txt  test_core.cpp  test_double_buffer_ring.cpp  test_lfu_cache.cpp  test_lockfree_queue.cpp  test_logger.cpp  test_lru_cache.cpp  test_object_pool.cpp  test_ring_buffer.cpp  test_scope_guard.cpp  test_task_flow.cpp  test_thread_pool.cpp  test_thread_safe_lru_cache.cpp
utils/: CMakeLists.txt  CRC16.cpp  CRC16.hpp  SHA1.hpp  any.hpp  logger.cpp  logger.hpp  scope_guard.hpp  timepoint.hpp  utf8_encode.h  util_path.hpp  uuid_utils.cpp  uuid_utils.h
